--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,13 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": "~2.0.5",
+        "yiisoft/yii2": "^2.0",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "davidjeddy/yii2-rss-reader": "*",
-        "zelenin/yii2-rss": "~0.1"
+        "zelenin/yii2-rss": "~0.1",
+        "himiklab/yii2-rss-writer-module": "*",
+        "kartik-v/yii2-widget-rating": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
