--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "davidjeddy/yii2-rss-reader": "*",
         "zelenin/yii2-rss": "~0.1",
         "himiklab/yii2-rss-writer-module": "*",
-        "kartik-v/yii2-widget-rating": "*"
+        "kartik-v/yii2-widget-rating": "*",
+        "kartik-v/yii2-social": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
